--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.4.1</version> <!-- Ensure this matches your Spring Boot version -->
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.11.0</version>
@@ -109,8 +114,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
 
 
 </project>
