--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,20 @@ spring.application.name=hospitalManagementSystemBackEnd
 server.port=8084
 spring.config.import=optional:file:.env[.properties]
 
+# postgress
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.pool-name=HikariCP
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 # DataSource Configuration
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?createDatabaseIfNotExist=true
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+# spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:postgresql://dpg-cuhlmlbtq21c73bc0tv0-a.oregon-postgres.render.com:5432/clinicms?user=root&password=wl5BXUibs1FO95jE76SGlDNKORZb2UfJ
+spring.datasource.username=root
+spring.datasource.password=wl5BXUibs1FO95jE76SGlDNKORZb2UfJ
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
