solve pgsql error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,13 +9,15 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # DataSource Configuration
 # spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:postgresql://dpg-cuhlmlbtq21c73bc0tv0-a.oregon-postgres.render.com:5432/clinicms?user=root&password=wl5BXUibs1FO95jE76SGlDNKORZb2UfJ
+spring.datasource.url=jdbc:postgresql://dpg-cuhp4vq3esus73cna2qg-a.oregon-postgres.render.com:5432/clinicms_oebm?user=root&password=eyqqqDkOdkeBsAslQ56X0dQEUGUVDamd
 spring.datasource.username=root
-spring.datasource.password=wl5BXUibs1FO95jE76SGlDNKORZb2UfJ
+spring.datasource.password=eyqqqDkOdkeBsAslQ56X0dQEUGUVDamd
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
 
 
