--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
 		<dependency>
     		<groupId>org.postgresql</groupId>
     		<artifactId>postgresql</artifactId>
+			    <version>42.5.0</version> <!-- or the latest version -->
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
